[project]
name = "cjudge"
version = "0.0.1"
authors = [
  { name="Jorge Hdez", email="jorgehdezplp@proton.me" },
]
description = "CLI utility for different online judges."
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["kattispdf", "requests"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/NotTete/cjudge"

[project.scripts]
cjudge-create = "cjudge:cli_create"
cjudge-info = "cjudge:cli_info"
cjudge-test = "cjudge:cli_test"
cjudge-submit = "cjudge:cli_submit"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
